<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.authFragment.AuthFragment">

    <TextView
        android:id="@+id/tv_signIn"
        android:layout_width="316dp"
        android:layout_height="32dp"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/signIn"
        android:textAlignment="center"
        android:textSize="28sp"
        style="@style/title"
        android:textStyle="bold"
        />

    <View
        android:id="@+id/view_line"
        android:layout_width="315dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="40dp"
        android:background="#4D12121D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signIn" />

    <EditText
        android:id="@+id/etMailSignIn"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="22dp"
        android:hint="@string/mail"
        android:textColor="#2B6CA6"
        android:importantForAutofill="no"
        android:textColorHint="#4D12121D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <EditText
        android:id="@+id/et_password_sign_in"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="22dp"
        android:hint="@string/Password_rus"
        android:textColor="#2B6CA6"

        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#4D12121D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMailSignIn" />

    <TextView
        android:id="@+id/tvNotRegisteredYet"
        android:layout_width="190dp"
        android:layout_height="18dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="22dp"
        android:text="@string/tv_ewe_ne_zareg"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_sign_in" />

    <TextView
        android:id="@+id/tvRegistrationSignIn"
        android:layout_width="88dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:text="@string/registration"
        android:textColor="#2566AF"
        app:layout_constraintStart_toEndOf="@id/tvNotRegisteredYet"
        app:layout_constraintTop_toBottomOf="@id/et_password_sign_in" />

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="112dp"
        android:layout_height="18dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="22dp"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNotRegisteredYet" />

    <TextView
        android:id="@+id/tvRecover"
        android:layout_width="96dp"
        android:layout_height="18dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="22dp"
        android:text="@string/recovery"
        android:textColor="#2566AF"
        app:layout_constraintStart_toEndOf="@id/tvForgetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrationSignIn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnCardSign"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginTop="66dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecover">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/styles"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="#0088cc"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lines_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCardSign">


        <View
            android:id="@+id/view2"
            android:layout_width="118dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="38dp"
            android:background="#4D000000" />

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginTop="26dp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="118dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="38dp"
            android:background="#4D000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lines_cont">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btnGmailInSign"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_gmail" />

    </LinearLayout>
    <include
        android:id="@+id/includeDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/fragment_dialog"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>