<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.registrationFragment.RegistrationFragment">
    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/registration_rus"
        style="@style/title"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="20dp"
        android:hint="@string/mail"
        android:textColor="#2B6CA6"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegistration" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="20dp"
        android:hint="@string/Password_rus"
        android:textColor="#2B6CA6"
        android:inputType="textWebPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <EditText
        android:id="@+id/et_regisUser"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:hint="Username"
        android:textColor="#2B6CA6"
        android:inputType="textPersonName|textNoSuggestions"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        />
    <EditText
        android:id="@+id/et_company"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:hint="учреждение"
        android:textColor="#2B6CA6"
        android:inputType="textPersonName|textNoSuggestions"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_regisUser"
        />

    <EditText
        android:id="@+id/et_specific"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:hint="должность"
        android:inputType="textPersonName|textNoSuggestions"
        android:maxLines="1"
        android:textColor="#2B6CA6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_company" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="220dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/et_specific"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="56dp"
        android:background="@drawable/styles"
        android:textStyle="bold"
        android:text="@string/registration_rus"
        android:textAllCaps="false"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/btnRegistration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#2B6CA6"

        android:text="@string/or"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/btnGmail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/ic_gmail"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26dp"/>

    <include
        android:id="@+id/includeDialog"
        layout="@layout/item_waiting_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>